# maicoin-faq-bot

./: Makefile  README.md  agent.py  chain.py  maicoin-faq-bot.plist  maicoin_faq_zh.json  pyproject.toml
.github/workflows/: deployment.yaml  publish.yaml  python.yaml
maicoin_faq_bot/: agent.py  bot.py  chain.py  cli.py  error.py  retriever.py  utils.py
maicoin_faq_bot/document_loaders/: __init__.py
maicoin_faq_bot/faq/: __init__.py  chain.py  docs.py  tool.py  vectorstore.py
maicoin_faq_bot/tools/: __init__.py  faq.py  max_ticker.py
maicoin_faq_bot/vectorstores/: __init__.py  faq.py
maicoinfaqbot/: agent.py  bot.py  retriever.py  utils.py
