[tool.poetry]
name = "maicoin-faq-bot"
version = "0.1.0"
description = ""
authors = ["なるみ"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
loguru = "^0.7.0"
cloudscraper = "^1.2.71"
langchain = "^0.0.215"
python-telegram-bot = "^20.3"
python-dotenv = "^1.0.0"
chromadb = "^0.3.26"
openai = "^0.27.8"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
yapf = "^0.33.0"
toml = "^0.10.2"
pytest = "^7.3.1"
coverage = "^7.2.7"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
maicoin-faq-bot = "maicoin_faq_bot.cli:main"
