[tool.poetry]
name = "maicoin-faq-bot"
version = "0.3.1"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.3.26"
cloudscraper = "^1.2.71"
duckduckgo-search = "^3.8.3"
faiss-cpu = "^1.7.4"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.19"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.3"
sentence-transformers = "^2.2.2"
telegraph = "^2.2.0"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
maicoin-faq-bot = "maicoin_faq_bot.cli:main"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
